[project]
name = "docker-disk-doctor"
version = "0.2.1"
description = "Explain-first Docker disk usage inspector (safe-by-default)"
authors = [{name = "Andreas Revdal"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "docker>=7.0.0",
  "rich>=13.0.0"
]

[project.scripts]
docker-disk-doctor = "doctor.cli:main"
dockerdoctor = "doctor.cli:main"


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
