[project]
name = "docker-disk-doctor"
version = "0.3.1"
description = "Safe, explain-first Docker disk usage inspector and cleanup tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Andreas Revdal"}]
keywords = ["docker", "homelab", "self-hosted", "disk-usage", "cli"]

dependencies = [
  "docker>=7.0.0",
  "rich>=13.0.0"
]

[project.scripts]
dockerdoctor = "doctor.cli:main"
docker-disk-doctor = "doctor.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
